--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bulma": "^0.7.2",
+    "husky": "^1.3.1",
     "lint-staged": "^8.1.3",
     "prettier": "^1.16.4",
     "react": "^16.7.0",
